# farray

./: .travis.yml  CMakeLists.txt  README.md  Vagrantfile
src/: CMakeLists.txt  farray.f90  foo.f90  main.f90  portable.F90
test/: CMakeLists.txt  testSuites.inc  test_farray.pfunit  test_foo.pfunit
